--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
-/[Ll]ibrary/
-*/Library/metadata/
-*/[Ll]ibrary/metadata/*
-*/[Ll]ibrary/ShaderCache/*
+[Ll]ibrary/
 */[Tt]emp/
-*/[Tt]emp/*
-/[Tt]emp/
 /[Oo]bj/
 /[Bb]uild/
 /[Bb]uilds/
@@ -28,7 +23,6 @@ ExportedObj/
 *.svd
 *.pdb
 *.info
-*.log
 
 # Unity3D generated meta files
 *.pidb.meta
@@ -39,5 +33,4 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
-
 *.DS_Store
